MESSAGE(STATUS "    Compiling Import Raster...")
ADD_DEFINITIONS(-DMONGO_HAVE_STDINT -DUSE_MONGODB)
IF(WIN32)
	SET (GDAL_HOME ../../../include/gdal)
	SET (MONGO_LIB_HOME ../../../lib)
ENDIF()
SET (MONGO_HOME ../../../include/mongo-c-driver)
INCLUDE_DIRECTORIES(${GDAL_HOME}/include ${MONGO_HOME} ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${GDAL_HOME}/lib ${MONGO_LIB_HOME} ${PROJECT_BINARY_DIR})

ADD_EXECUTABLE(import_raster main.cpp Raster.cpp util.cpp SubBasin.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
IF(WIN32)
	SET_PROPERTY(TARGET import_raster PROPERTY FOLDER "Import_Raster")
	TARGET_LINK_LIBRARIES(import_raster gdal_i.lib bson.lib mongoc.lib)
ELSE()
	TARGET_LINK_LIBRARIES(import_raster libgdal.so libmongoc.so libbson.so)
ENDIF()
