MESSAGE(STATUS "    Compiling IUH...")
ADD_DEFINITIONS(-DMONGO_HAVE_STDINT -DUSE_MONGODB)
IF(WIN32)
	SET (GDAL_HOME ../../../include/gdal)
	SET (MONGO_LIB_HOME ../../../lib)
ENDIF()
SET (MONGO_HOME ../../../include/mongo-c-driver)
INCLUDE_DIRECTORIES(${GDAL_HOME}/include ${MONGO_HOME} ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${GDAL_HOME}/lib ${MONGO_LIB_HOME} ${PROJECT_BINARY_DIR})

ADD_EXECUTABLE(iuh Main.cpp SubbasinIUHCalculator.cpp Raster.cpp util.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
IF(WIN32)
	SET_PROPERTY(TARGET iuh PROPERTY FOLDER "IUH")
	TARGET_LINK_LIBRARIES(iuh gdal_i.lib bson.lib mongoc.lib)
ELSE()
	TARGET_LINK_LIBRARIES(iuh libgdal.so libmongoc.so libbson.so)
ENDIF()