MESSAGE(STATUS "    Compiling Mask Raster...")
IF(WIN32)
	SET (GDAL_HOME ../../../include/gdal)
ENDIF()
INCLUDE_DIRECTORIES(${GDAL_HOME}/include ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${GDAL_HOME}/lib ${PROJECT_BINARY_DIR})
ADD_EXECUTABLE(mask_raster Raster.cpp mask_rasters.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
IF(WIN32)
	TARGET_LINK_LIBRARIES(mask_raster gdal_i.lib ${MPI_LIB})
	SET_PROPERTY(TARGET mask_raster PROPERTY FOLDER "Mask")
ELSE()
	TARGET_LINK_LIBRARIES(mask_raster libgdal.so)
ENDIF()