MESSAGE(STATUS "    Compiling Reclassify for landuse etc...")
IF(WIN32)
	SET (GDAL_HOME ../../../include/gdal)
	INCLUDE_DIRECTORIES(${GDAL_HOME}/include ${MPI_INCLUDE} ${PROJECT_BINARY_DIR})
	LINK_DIRECTORIES(${GDAL_HOME}/lib ${MPI_LIBDIR} ${PROJECT_BINARY_DIR})
ELSE()
	INCLUDE_DIRECTORIES(${GDAL_HOME}/include ${MPI_HOME}/include ${PROJECT_BINARY_DIR})
	LINK_DIRECTORIES(${GDAL_HOME}/lib ${MPI_HOME}/lib ${PROJECT_BINARY_DIR})
ENDIF()
ADD_EXECUTABLE(reclassify application.cpp reclassify.cpp ReclassifyOperator.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
IF(WIN32)
	TARGET_LINK_LIBRARIES(reclassify gdal_i.lib ${MPI_LIB})
	SET_PROPERTY(TARGET reclassify PROPERTY FOLDER "Reclassify")
ELSE()
	TARGET_LINK_LIBRARIES(reclassify libgdal.so )
ENDIF()