#SET (MONGO_HOME ../../../include/mongo-c-driver)
#SET (LIB_DIR ../../../lib)
#INCLUDE_DIRECTORIES(../util ../data ${MONGO_HOME})
#LINK_DIRECTORIES(${LIB_DIR} ${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../util ../data)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
AUX_SOURCE_DIRECTORY(. SRC_LIST)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(bmps STATIC ${SRC_LIST})
IF(WIN32)
	TARGET_LINK_LIBRARIES(bmps util data)
	SET_TARGET_PROPERTIES(bmps PROPERTIES COMPILE_FLAGS "/openmp")
	SET_PROPERTY(TARGET bmps PROPERTY FOLDER "base")
ELSE()
	TARGET_LINK_LIBRARIES(bmps libutil.so libdata.so)
ENDIF()
#TARGET_LINK_LIBRARIES(bmps util data)
#SET_TARGET_PROPERTIES(bmps PROPERTIES COMPILE_FLAGS "/openmp")
#SET_PROPERTY(TARGET bmps PROPERTY FOLDER "base")

# TARGET_LINK_LIBRARIES(bmps libutil.so libdata.so libbson-1.0.so libmongoc-1.0.so)
