LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
AUX_SOURCE_DIRECTORY(. SRC_LIST)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(bmps STATIC ${SRC_LIST})
IF (MSVC)
    SET_PROPERTY(TARGET bmps PROPERTY FOLDER "base")
ENDIF ()
IF (WIN32)
    TARGET_LINK_LIBRARIES(bmps util.lib gdal_i.lib bson-1.0.lib mongoc-1.0.lib)
ELSE ()
    TARGET_LINK_LIBRARIES(bmps libutil.a libbson-1.0.so libmongoc-1.0.so libgdal.so)
ENDIF ()
