LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../util ../module_setting)
SET(SRC_LIST ../util/SimulationModule.cpp ClimateParams.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(CLIMATE SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(CLIMATE libutil.a)
TARGET_LINK_LIBRARIES(CLIMATE util module_setting)
SET_TARGET_PROPERTIES( CLIMATE PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET CLIMATE PROPERTY FOLDER "base")