IF(WIN32)
	SET (GDAL_HOME ../../../include/gdal)
	SET (LIB_DIR ../../../lib)
ELSE()
	SET (LIB_DIR /usr/lib64  /usr/lib)
ENDIF()
SET (MONGO_HOME ../../../include/mongo-c-driver)
INCLUDE_DIRECTORIES(${GDAL_HOME}/include ../util ${MONGO_HOME})
LINK_DIRECTORIES(${GDAL_HOME}/lib ${LIB_DIR} ${PROJECT_BINARY_DIR})
AUX_SOURCE_DIRECTORY(. SRC_LIST)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(data STATIC ${SRC_LIST})
IF(WIN32)
	TARGET_LINK_LIBRARIES(data util)
	SET_TARGET_PROPERTIES( data PROPERTIES COMPILE_FLAGS "/openmp")
	SET_PROPERTY(TARGET data PROPERTY FOLDER "base")
ELSE()
	TARGET_LINK_LIBRARIES(data libgdal.so libutil.so libmongoc.so libbson.so)
ENDIF()