LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST main.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_EXECUTABLE(functionTest ${SRC_LIST})
IF(WIN32)
	TARGET_LINK_LIBRARIES(functionTest util data module_setting gdal_i.lib mongoc-1.0.lib bson-1.0.lib bson-static-1.0.lib mongoc-static-1.0.lib)
	SET_TARGET_PROPERTIES(functionTest PROPERTIES COMPILE_FLAGS "/openmp")
	SET_PROPERTY(TARGET functionTest PROPERTY FOLDER "main")
ELSE()
	TARGET_LINK_LIBRARIES(functionTest libutil libdata libmodule_setting)
ENDIF()