LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST main.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_EXECUTABLE(functionTest ${SRC_LIST})
IF (MSVC)
    SET_PROPERTY(TARGET functionTest PROPERTY FOLDER "main")
ENDIF ()
IF (WIN32)
    TARGET_LINK_LIBRARIES(functionTest module_setting.lib bmps.lib data.lib util.lib)
ELSE ()
    TARGET_LINK_LIBRARIES(functionTest libgdal.so libdata.a libbmps.a libutil.a libbson-1.0.so libmongoc-1.0.so)
ENDIF ()