IF (NOT WIN32)
    SET(CMAKE_CXX_COMPILER mpic++)
ENDIF ()
INCLUDE_DIRECTORIES(../main_omp)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST ReadData.cpp main.cpp ManagementProcess.cpp CalculateProcess.cpp CombineRaster.cpp)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_EXECUTABLE(seims ${SRC_LIST})
IF (WIN32)
    TARGET_LINK_LIBRARIES(seims util data bmps module_setting main_mongodb gdal_i mongoc-1.0 bson-1.0 bson-static-1.0 mongoc-static-1.0)
    SET_PROPERTY(TARGET seims PROPERTY FOLDER "main")
ELSE ()
    TARGET_LINK_LIBRARIES(seims libgdal.so libsqlite3.so libutil.so libdata.so libbmps.so libmodule_setting.so libmain_mongodb.so libmongoc-1.0 libbson-1.0)
ENDIF (WIN32)
