IF(WIN32)
	SET (GDAL_HOME ../../../include/gdal)
	SET (LIB_DIR ../../../lib)
ENDIF()
INCLUDE_DIRECTORIES(../../base/util ../../base/data ../../base/bmps ../../base/module_setting ../../../include/mongo-c-driver ${GDAL_HOME}/include)
LINK_DIRECTORIES(${GDAL_HOME}/lib ${LIB_DIR}  ${PROJECT_BINARY_DIR})
SET(SRC_LIST ModelMain.cpp main.cpp invoke.cpp)

IF(SEIMS_VERSION STREQUAL "OPENMP")
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
	ADD_EXECUTABLE(seims_omp ${SRC_LIST})
	TARGET_LINK_LIBRARIES(seims_omp util data bmps module_setting gdal_i.lib mongoc.lib bson.lib)
	SET_TARGET_PROPERTIES(seims_omp PROPERTIES COMPILE_FLAGS "/openmp")
	SET_PROPERTY(TARGET seims_omp PROPERTY FOLDER "main")
ELSE()
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
	ADD_LIBRARY(main_mongodb STATIC ${SRC_LIST})
	TARGET_LINK_LIBRARIES(main_mongodb util data bmps module_setting gdal_i.lib mongoc.lib bson.lib)
	SET_TARGET_PROPERTIES(main_mongodb PROPERTIES COMPILE_FLAGS "/openmp")
	SET_PROPERTY(TARGET main_mongodb PROPERTY FOLDER "main")
ENDIF()
# TARGET_LINK_LIBRARIES(seims libsqlite3.so libgdal.so libutil.a libdata.so libbmps.so libmodule_setting.so libbson.so libmongoc.so)
# TARGET_LINK_LIBRARIES(main_mongodb libgdal.so libutil.so libdata.so libbmps.so libmodule_setting.so libbson.so libmongoc.so)