LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST ModelMain.cpp main.cpp invoke.cpp)
IF(SEIMSVERSION STREQUAL MPI)
	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
	ADD_LIBRARY(main_mongodb STATIC ${SRC_LIST})
	IF(WIN32)
		TARGET_LINK_LIBRARIES(main_mongodb util data bmps module_setting gdal_i.lib mongoc-1.0.lib bson-1.0.lib bson-static-1.0.lib mongoc-static-1.0.lib)
		SET_TARGET_PROPERTIES(main_mongodb PROPERTIES COMPILE_FLAGS "/openmp")
		SET_PROPERTY(TARGET main_mongodb PROPERTY FOLDER "main")
	ELSE()
		TARGET_LINK_LIBRARIES(main_mongodb libutil libdata libbmps libmodule_setting libmongoc-1.0  libbson-1.0)
	ENDIF()
ELSE()
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
	ADD_EXECUTABLE(seims_omp ${SRC_LIST})
	IF(WIN32)
		TARGET_LINK_LIBRARIES(seims_omp util data bmps module_setting gdal_i.lib mongoc-1.0.lib bson-1.0.lib bson-static-1.0.lib mongoc-static-1.0.lib)
		SET_TARGET_PROPERTIES(seims_omp PROPERTIES COMPILE_FLAGS "/openmp")
		SET_PROPERTY(TARGET seims_omp PROPERTY FOLDER "main")
	ELSE()
		TARGET_LINK_LIBRARIES(seims_omp libutil libdata libbmps libmodule_setting libmongoc-1.0  libbson-1.0)
	ENDIF()
ENDIF()