MESSAGE(STATUS "    Compiling folder: hydrology...")
ADD_SUBDIRECTORY(./CH_DW)
ADD_SUBDIRECTORY(./CH_MSK)
ADD_SUBDIRECTORY(./DEP_FS)
ADD_SUBDIRECTORY(./GWATER_RESERVOIR)
ADD_SUBDIRECTORY(./HS_WB)
ADD_SUBDIRECTORY(./IKW_CH)
#ADD_SUBDIRECTORY(./IKW_CH_Height)
ADD_SUBDIRECTORY(./IKW_OL)
#ADD_SUBDIRECTORY(./IKW_OL_reinfiltration)
ADD_SUBDIRECTORY(./INTERFLOW_IKW)
ADD_SUBDIRECTORY(./ITP)
ADD_SUBDIRECTORY(./PERCO_DARCY)
ADD_SUBDIRECTORY(./PI_STORM)
#ADD_SUBDIRECTORY(./SUR_EXCESS) #linux only?
ADD_SUBDIRECTORY(./SUR_SGA)
ADD_SUBDIRECTORY(./TSD_RD)