MESSAGE(STATUS "    Compiling folder: nutrient...")
ADD_SUBDIRECTORY(./DisNut_OL)
ADD_SUBDIRECTORY(./DisNut_CH)
ADD_SUBDIRECTORY(./AtmDep)
ADD_SUBDIRECTORY(./Denitri)
ADD_SUBDIRECTORY(./MinDec)
ADD_SUBDIRECTORY(./NitVol)
ADD_SUBDIRECTORY(./NitFix)
ADD_SUBDIRECTORY(./NutTra_CH)
ADD_SUBDIRECTORY(./NutTra_OL)
ADD_SUBDIRECTORY(./SedBonNut_CH)
ADD_SUBDIRECTORY(./SedBonNut_OL)
ADD_SUBDIRECTORY(./SorPho)