MESSAGE(STATUS "    Compiling folder: nutrient...")
ADD_SUBDIRECTORY(./AtmDep)
ADD_SUBDIRECTORY(./MINRL)
ADD_SUBDIRECTORY(./NutrCH_IKW)
ADD_SUBDIRECTORY(./NutrCH_IUH)
ADD_SUBDIRECTORY(./NutrGW)
ADD_SUBDIRECTORY(./NutrOL_IKW)
ADD_SUBDIRECTORY(./NutrOL_IUH)
ADD_SUBDIRECTORY(./NutrMV)
ADD_SUBDIRECTORY(./NutrSed)