LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting ../common)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp PotentialBiomass.cpp Climate.cpp ../common/Common.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(POTENTIALBIOMASS SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(POTENTIALBIOMASS libutil.a)
TARGET_LINK_LIBRARIES(POTENTIALBIOMASS util module_setting)
SET_TARGET_PROPERTIES(POTENTIALBIOMASS PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET POTENTIALBIOMASS PROPERTY FOLDER "modules/plant_growth")