LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting ../common)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp UptakeGrowth.cpp ../common/Common.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(UPTAKEGROWTH SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(UPTAKEGROWTH libutil.a)
TARGET_LINK_LIBRARIES(UPTAKEGROWTH util module_setting)
SET_TARGET_PROPERTIES(UPTAKEGROWTH PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET UPTAKEGROWTH PROPERTY FOLDER "modules/plant_growth")