LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting ../common)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp Yield.cpp ../common/Common.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(YIELD SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(YIELD libutil.a)
TARGET_LINK_LIBRARIES(YIELD util module_setting)
SET_TARGET_PROPERTIES(YIELD PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET YIELD PROPERTY FOLDER "modules/plant_growth")