LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp Denitrification.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(DENITRI SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(DENITRI libutil.a)
TARGET_LINK_LIBRARIES(DENITRI util module_setting)
SET_TARGET_PROPERTIES(DENITRI PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET DENITRI PROPERTY FOLDER "modules/nutrient")
