LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp DissolvedNutrient_OL.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(DISNUT_OL SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(DISNUT_OL libutil.a)
TARGET_LINK_LIBRARIES(DISNUT_OL util module_setting)
SET_TARGET_PROPERTIES(DISNUT_OL PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET DISNUT_OL PROPERTY FOLDER "modules/nutrient")
