LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp MineralizationAndDecomposition.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(MINDEC SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(MINDEC libutil.a)
TARGET_LINK_LIBRARIES(MINDEC util module_setting)
SET_TARGET_PROPERTIES(MINDEC PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET MINDEC PROPERTY FOLDER "modules/nutrient")