LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp NitrificationAndAmmoniaVolatilization.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(NITVOL SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(NITVOL libutil.a)
TARGET_LINK_LIBRARIES(NITVOL util module_setting)
SET_TARGET_PROPERTIES(NITVOL PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET NITVOL PROPERTY FOLDER "modules/nutrient")