LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp NutTra_CH.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(NUTTRA_CH SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(NUTTRA_CH libutil.a)
TARGET_LINK_LIBRARIES(NUTTRA_CH util module_setting)
SET_TARGET_PROPERTIES( NUTTRA_CH PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET NUTTRA_CH PROPERTY FOLDER "modules/nutrient")