LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp SedBonNutrient_CH.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(SEDBONNUT_CH SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(SEDBONNUT_CH libutil.a)
TARGET_LINK_LIBRARIES(SEDBONNUT_CH util module_setting)
SET_TARGET_PROPERTIES(SEDBONNUT_CH PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET SEDBONNUT_CH PROPERTY FOLDER "modules/nutrient")