LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../../../base/util ../../../base/module_setting)
SET(SRC_LIST ../../../base/util/SimulationModule.cpp SedBonNutrient_OL.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(SEDBONNUT_OL SHARED ${SRC_LIST})
#TARGET_LINK_LIBRARIES(SEDBONNUT_OL libutil.a)
TARGET_LINK_LIBRARIES(SEDBONNUT_OL util module_setting)
SET_TARGET_PROPERTIES(SEDBONNUT_OL PROPERTIES COMPILE_FLAGS "/openmp")
SET_PROPERTY(TARGET SEDBONNUT_OL PROPERTY FOLDER "modules/nutrient")